GRAXConnect/main/default/objects/GRAX_Schedule_Process__c/GRAX_Schedule_Process__c.object-meta.xml
<CustomObject>
    <description>GRAX Schedule Process</description>
    <label>GRAX Schedule Process</label>
    <nameField>
        <displayFormat>GRAX-Proc-{0000000}</displayFormat>
        <label>GRAX Schedule Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GRAX Schedule Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>