GRAXConnect/main/default/objects/GRAX_Schedule_Process__c/fields/Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Date_Field__c</fullName>
    <description>Date_Field</description>
    <label>Date Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>