GRAXConnect/main/default/objects/GRAX_Schedule_Process__c/fields/Last_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Date__c</fullName>
    <description>Last_Run_Date</description>
    <label>Last Run Date</label>
    <type>DateTime</type>
</CustomField>