GRAXConnect/main/default/objects/GRAX_Schedule_Process__c/fields/Next_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Run_Date__c</fullName>
    <description>Next_Run_Date</description>
    <label>Next Run Date</label>
    <type>DateTime</type>
</CustomField>