GRAXConnect/main/default/objects/GRAX_Schedule_Process__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Object_Name</description>
    <label>Object Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>