GRAXConnect/main/default/objects/GRAX_Schedule_Process__c/fields/Schedule_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Start_Date__c</fullName>
    <description>Schedule_Start_Date</description>
    <label>Schedule Start Date</label>
    <type>Date</type>
</CustomField>