GRAXConnect/main/default/objects/GRAX_Schedule_Process__c/fields/Schedule_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Start_Time__c</fullName>
    <description>Schedule_Start_Time</description>
    <label>Schedule Start Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>