GRAXConnect/main/default/objects/GRAX_Schedule_Process__c/fields/Select_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Select_Criteria__c</fullName>
    <description>Select_Criteria</description>
    <label>Select Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main Object not modified</fullName>
            </value>
            <value>
                <fullName>Main Object and Children not modified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>