GRAXConnect/main/default/objects/GRAX_Schedule_Process__c/fields/Selected_Object_Hierarchy_JSON__c.field-meta.xml
<CustomField>
    <fullName>Selected_Object_Hierarchy_JSON__c</fullName>
    <description>Selected_Object_Hierarchy_JSON</description>
    <label>Selected Object Hierarchy JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>