GRAXConnect/main/default/objects/GRAX_Schedule_Process__c/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <description>Target_Date</description>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>