GRAXConnect/main/default/objects/GRAX_Schedule_Process__c/fields/Target_Report__c.field-meta.xml
<CustomField>
    <fullName>Target_Report__c</fullName>
    <label>Target Report</label>
    <length>20</length>
    <type>Text</type>
</CustomField>