GRAXConnect/main/default/objects/GRAX_Schedule_Process__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hierarchy</fullName>
                <default>true</default>
                <label>Hierarchy</label>
            </value>
            <value>
                <fullName>Multi-Object</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>